improvements to greeter
- localized possible greetings
- now listens for text in the room, no explicit command
- routes to greeting if part of a larger greetings like, hello there

--- a/lita-announcer/locales/en.yml
+++ b/lita-announcer/locales/en.yml
@@ -2,5 +2,5 @@ en:
   lita:
     handlers:
       announcer:
-        join: "I am Operational!"
+        join: "Reporting for duty!"
         part: "I must go, my planet needs me!"
